# black-jack

./: Makefile  README.md  pyproject.toml  setup.cfg
black_jack/: game_engine.py
black_jack/game_function/: make_cards.py  process_function.py
black_jack/scripts/: black_jack.py
