[tool.poetry]
name = "black-jack"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "black-jack"}]


[tool.poetry.dependencies]
python = "^3.8.1"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[tool.poetry.scripts]
black-jack = "black_jack.scripts.black_jack:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
